--- a/wp-content/themes/retrain/static/css/modules/carousel_logos/carousel_logos.css
+++ b/wp-content/themes/retrain/static/css/modules/carousel_logos/carousel_logos.css
@@ -4,6 +4,9 @@
 #logos-slider {
     margin-top: 44px;
 }
+#logos-slider .owl-stage {
+    margin: 0 auto;
+}
 #logos-slider .card-logos {
     background: #fff;
     box-shadow: 0px 0px 10px #0000001a;
