--- a/wp-content/themes/retrain/static/css/modules/featured_resource/featured_resource.css
+++ b/wp-content/themes/retrain/static/css/modules/featured_resource/featured_resource.css
@@ -12,6 +12,8 @@
 }
 .featured_resources_content {
     padding: 40px 43px 58px 44px;
+	height:228px!important;
+	
 }
 .featured_text {
     color: #A09FA5;
@@ -154,4 +156,7 @@
     .featured_resource {
         padding-bottom: 30px;
     }
+	
+	.featured_resources_content {
+	height:auto;
 }
